// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dauphin Service buildSearchHeader should build header 1`] = `
Object {
  "headers": Object {
    "Referer": "https://agent-dauphin.cget.gouv.fr/referentiel-financement/public/",
    "Referrer-Policy": "strict-origin-when-cross-origin",
    "accept": "application/json, text/plain, */*,application/vnd.mgdis.tiers-3.19.0+json",
    "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
    "authorization": "Bearer FAKE_TOKEN",
    "content-type": "application/json;charset=UTF-8",
    "mg-authentication": "true",
  },
}
`;

exports[`Dauphin Service getSpecificDocumentStream should call axios with args 1`] = `
Array [
  "https://agent-dauphin.cget.gouv.frPATH",
  Object {
    "headers": Object {
      "Referer": "https://agent-dauphin.cget.gouv.fr/referentiel-financement/public/",
      "Referrer-Policy": "strict-origin-when-cross-origin",
      "accept": "application/json, text/plain, */*, application/vnd.mgdis.tiers-3.19.0+json",
      "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
      "authorization": "Bearer FAKE_TOKEN",
      "mg-authentication": "true",
    },
    "responseType": "stream",
  },
]
`;

exports[`Dauphin Service sendAuthRequest should call axios 1`] = `
Array [
  "https://agent-dauphin.cget.gouv.fr/account-management/cget-agents/tokens",
  "username=DAUPHIN_USERNAME&password=DAUPHIN_PASSWORD&redirectTo=https%3A%2F%2Fagent-dauphin.cget.gouv.fr%2Fagents%2F%23%2Fcget%2Fhome%3FredirectTo%3Dportal.home",
  Object {
    "headers": Object {
      "Referer": "https://agent-dauphin.cget.gouv.fr/account-management/cget-agents/ux/",
      "Referrer-Policy": "strict-origin-when-cross-origin",
      "accept": "application/json, text/plain, */*",
      "accept-language": "fr-FR,fr;q=0.9,en-US;q=0.8,en;q=0.7",
      "content-type": "application/x-www-form-urlencoded",
    },
  },
]
`;

exports[`Dauphin Service updateApplicationCache should call axios with args 1`] = `
Array [
  "https://agent-dauphin.cget.gouv.fr/referentiel-financement/api/tenants/cget/demandes-financement/tables/_search",
  Object {
    "from": 0,
  },
  Object {
    "headers": Object {},
  },
]
`;
